2001-03-02  Steve Youngs  <youngs@xemacs.org>

	* INSTALL: Update.

	* NEWS: Ditto.

	* TODO: Ditto.

	* Makefile (ELCS): Add eicq-report.elc.
	(include ../../XEmacs.rules): Move to below other variables so
	everything gets installed properly.

	* eicq-toolbar.el: Add require 'eicq.

2001-03-01  Steve Youngs  <youngs@xemacs.org>

	* Makefile (REQUIRES): Add eicq, gnus.

	* eicq.el (eicq-blurb): New
	(eval-when-compile): Remove require 'eicq-report.

	* udp2tcp.cc (main): Update URL.

2001-02-28  Ben Wing  <ben@xemacs.org>

	* udp2tcp.cc (main): Conditionalize change to third arg to accept
	on __CYGWIN__, so that all other systems keep size_t -- simply
	changing the arg makes this not compile under Linux.

2001-02-24  Ben Wing  <ben@xemacs.org>

	* Makefile (STRIP):
	* Makefile (EXTRA_SOURCES):
	* Makefile (EXTRA_OBJS):
	Fix udp2tcp compilation to work under MS Windows.
	
	* udp2tcp.cc (main):
	Emergency fixes so it compiles. (change bzero to memset; fix type
	of third arg to accept)

2001-03-01  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-main-menu): Capitalise entries.
	(eicq-log-menu): Ditto.

2001-02-21  Steve Youngs  <youngs@xemacs.org>

	* eicq.el: Update all doc strings.
	(eicq-email-author): Move to eicq-report.el

	* eicq-report.el: New file.

2001-01-25  Steve Youngs  <youngs@xemacs.org>

	* version 0.2.8 released - XEmacs package 1.03

	* eicq.el (eicq-buddy-view): Remove :set 'eicq-buddy-view-set.
	(eicq-version): Increment.

	* eicq.texi (VERSION): Ditto.

2000-11-27  Steve Youngs  <youngs@xemacs.org>

	* Makefile (CFLAGS): Add -static so people that use a different
	compiler to me wont have problems.

2000-11-14  Steve Youngs  <youngs@xemacs.org>

	* eicq.el: Doc fix.

2000-10-23  Steve Youngs  <youngs@xemacs.org>

	* version 0.2.7 released - XEmacs package 1.02

	* *: Update my email address.

2000-10-05  Martin Buchholz  <martin@xemacs.org>

	* *: Mega typo fix.

2000-08-22  Steve Youngs  <youngs@xemacs.org>
